--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         
             <footer>
                 <hr/>
-                <p>info@emmauscollege.nl</p>
+                <p class="smalltext">info@emmauscollege.nl</p>
                 <p class="smalltext">copyright A.P. Cammeraat 2016</p>
             </footer>
         
