--- a/toprated.html
+++ b/toprated.html
@@ -11,7 +11,7 @@
     <body>
         <main>
             <header>
-                <h1>Wat vind ik nou de beste films ever?</h1>
+                <h1>beste films (imo)</h1>
                 <br>
             </header>
             
