--- a/genres.html
+++ b/genres.html
@@ -27,9 +27,11 @@
             
             <article>
                 <div class="genres">
+                    <img class="plaatje" src="afbeeldingen/loremipsum.jpg">
                 <p class="rechts">Informatie (van Latijn informare: "vormgeven, vormen, instrueren") is alles wat kennis toevoegt en zo onwetendheid, onzekerheid of onbepaaldheid vermindert. Strikt genomen is informatie pas informatie als die interpreteerbaar is. Interpreteren en integreren van informatie resulteert in kennis. Er verschenen in de loop van de tijd honderden definities van het begrip. Dit komt doordat een aantal (sub)wetenschappen en toepassingsgebieden het verschillend gebruiken. Informatie wordt overgedragen via communicatie. Wie een boodschap overdraagt is de zender en wie de boodschap ontvangt is de ontvanger. Meestal is er tweerichtingsverkeer.</p>
-                <p class="links">dit is bla bla ik weet niet wat ik schrijf bla bla bla oefening jada caey fhvk djkdfkdf jdjf oefening werkt hetxo wel als hewt geen heel woord is ik hoop het</p>
-                <p class="rechts">olay blijkbaar werkt het so im happy rn ik had al stress dat het mew niet ging lukken maar ik heb er nu wel vertrouwen in dus het gaat helemaal ghoed komen lol</p>
+                <p class="links">De term persoonlijkheid is afgeleid van het Latijnse 'persona' of masker, waardoor ook de connotatie is ontstaan dat persoonlijkheid te maken heeft met het uiterlijke gedrag, dat wat de omgeving van iemand ziet. Het verschil met 'karakter' is dat persoonlijkheid door opvoeding en omgeving beïnvloed worden en pas vorm krijgt tijdens de adolescentie, terwijl karakter vaak meer als de biologische aanleg, de (aangeboren, vrij onveranderlijke) aard van die persoon wordt beschouwd.</p>
+                    <img class="plaatje" src="afbeeldingen/loremipsum.jpg">
+                <p class="rechts">De persoonlijkheid wordt ook omschreven als het unieke en stabiele patroon van psychologische en gedragskenmerken waardoor de ene mens zich van de andere onderscheidt. Eenvoudig uitgedrukt: de manier waarop iemand met uiteenlopende situaties omgaat of het karakteristieke gedragspatroon dat iemand in verschillende situaties vertoont, noemen we persoonlijkheid. Onderzoek laat zien dat de persoonlijkheid gedurende de levensloop kan veranderen ten gevolge van levensgebeurtenissen.</p>
                 </div>
             </article>
         
