--- a/toprated.html
+++ b/toprated.html
@@ -29,10 +29,32 @@
             <article>
                 <div class="rated">
                     <img class="plaatje" src="afbeeldingen/loremipsum.jpg">
-                <p class="rechts">De persoonlijkheid is een begrip uit de psychologie en omvat een dynamisch en georganiseerd geheel van karakteristieken. gjgjfk djdj jddkv jskf jcm c kck kc m rfjnfjnd kdfeigfov jvdivfvfjo ijfojoi Dit geheel van eigenschappen beschrijft de manier waarop een persoon in verschillende situaties zal reageren, de manier waarop hij denkt, en waardoor hij gemotiveerd zal worden.</p>
-                <p class="links">De term persoonlijkheid is afgeleid van het Latijnse 'persona' of maskwaardoor ook de connotatie is ontstaan. dat wat de omgeving van iemand ziet. Het verschil met 'karakter' is dat persoonlijkheid door opvoeding en omgeving beïnvloed worden en pas vorm krijgt tijdens de adolescentie, terwijl karakter vaak meer als de biologische aanleg, de (aangeboren, vrij onveranderlijke) aard van die persoon wordt beschouwd.</p>
-                    <img class="plaatje" src="afbeeldingen/loremipsum.jpg">
-                <p class="rechts">De persoonlijkheid wordt ook omschreven als het unieke en stabiele patroon van psychologische en gedragskenmerken waardoor de ene mens zich van de andere onderscheidt. Eenvoudig uitgedrukt: de manier waarop iemand met uiteenlopende situaties omgaat of het karakteristieke gedragspatroon dat iemand in verschillende situaties vertoont, noemen we persoonlijkheid. Onderzoek laat zien dat de persoonlijkheid gedurende de levensloop kan veranderen ten gevolge van levensgebeurtenissen.</p>
+                <p class="rechts">Heb je nou totaal geen inspiratie voor welke film je vanavond wilt gaan kijken? Ik ga je helpen! Ik heb een lijst gemaakt van de beste films die er zijn, en ook nog met een top 3! Ik weet zeker dat de perfecte film voor jou ertussen zit <strong>;)</strong></p>.
+               <ul class="links">
+                   <strong>de beste films aller tijden:</strong>
+                <li>scarface (1983)</li>
+                <li>pulp fiction (1994)</li>
+                <li>the matrix(1999)</li>
+                <li>lord of the rings (alle delen)</li>
+                <li>la vita e belle (1997)</li>
+                <li>coming to America (1988)</li>
+                <li>the godfather (alle delen)</li>
+                <li>back to the future (1985)</li>
+                <li>intouchables (2011)</li>
+                <li>star wars (alle delen)</li>
+                <li>the conjouring (alle delen)</li>
+                <li>lion king (1994)</li>
+                <li>taken (alle delen)</li>
+                <li>terminator 2 (1991)</li>
+                <li>pretty woman (1990)</li>
+                <li>nog steeds niet genoeg keus? klik dan <a href="https://www.moviemeter.nl/toplijst/film/1/top-250-beste-films-aller-tijden">hier</a> voor nog meer films</li>
+                </ul>
+                    <img class="plaatje2" src="afbeeldingen/loremipsum.jpg">
+                <ol class="rechts">natuurlijk heb ik mn eigen ranking, dit is mijn <strong>top 3</strong>:
+                <li>1. coming to america</li>
+                <li>2. the godfather</li>
+                <li>3. pretty woman</li>
+                </ol>
                 </div>
             </article>
 
