--- a/toprated.html
+++ b/toprated.html
@@ -51,9 +51,9 @@
                 </ul>
                     <img class="plaatje2" src="afbeeldingen/loremipsum.jpg">
                 <ol class="rechts">natuurlijk heb ik mn eigen ranking, dit is mijn <strong>top 3</strong>:
-                <li>1. coming to america</li>
-                <li>2. the godfather</li>
-                <li>3. pretty woman</li>
+                <li>1. the godfather</li>
+                <li>2. pretty woman</li>
+                <li>3. coming to America</li>
                 </ol>
                 </div>
             </article>
