--- a/acteurs.html
+++ b/acteurs.html
@@ -28,12 +28,36 @@
             <article>
                 <div class="acteurs">
                     <img class="plaatje" src="afbeeldingen/loremipsum.jpg">
-                <p class="rechts">Je zou kunnen zeggen dat de acteurs het belangrijkste <p>
-                <p class="links">De term persoonlijkheid is afgeleid van het Latijnse 'persona' of masker, waardoor ook de connotatie is ontstaan dat persoonlijkheid te maken heeft met het uiterlijke gedrag, dat wat de omgeving van iemand ziet. Het verschil met 'karakter' is dat persoonlijkheid door opvoeding en omgeving beïnvloed worden en pas vorm krijgt tijdens de adolescentie, terwijl karakter vaak meer als de biologische aanleg, de (aangeboren, vrij onveranderlijke) aard van die persoon wordt beschouwd.</p>
+                <p class="rechts">De acteurs zijn het belangrijkste gedeelte van een film. Als de acteur het niet goed doet, is je film (meestal) verpest. Om een goede film te kiezen waarvan je zeker weet dat de acteurs het niet zullen verpesten, heb ik een lijst gemaakt van de beste acteurs oat. Om het overzichtelijk te houden, is er 1 lijst voor mannen, en 1 lijst voor vrouwen.<p>
+                <ul class="links"><strong>Beste mannelijke acteurs:</strong>
+                    <li>Tom Hanks</li>
+                    <li>Arnold Schwarzenegger</li>
+                    <li>Johnny Depp</li>
+                    <li>Morgan Freeman</li>
+                    <li>Ian McKellen</li>
+                    <li>Robert de Niro</li>
+                    <li>Denzel Washington</li>
+                    <li>Eddie Murphy</li>
+                    <li>Adam Sandler</li>
+                    <li>Sylvester Stallone</li>
+                    <li>Al Pacino</li>
+                    <li>Willem Dafoe</li>
+                    <li>Daniel Craig</li>
+                </ul>
                     <img class="plaatje" src="afbeeldingen/loremipsum.jpg">
-                <p class="rechts">De persoonlijkheid wordt ook omschreven als het unieke en stabiele patroon van psychologische en gedragskenmerken waardoor de ene mens zich van de andere onderscheidt. Eenvoudig uitgedrukt: de manier waarop iemand met uiteenlopende situaties omgaat of het karakteristieke gedragspatroon dat iemand in verschillende situaties vertoont, noemen we persoonlijkheid. Onderzoek laat zien dat de persoonlijkheid gedurende de levensloop kan veranderen ten gevolge van levensgebeurtenissen.</p>
-                </div>
-            </article>
+                <ul class="rechts"><strong>Beste vrouwelijke actrices:</strong>
+                    <li>Julia Roberts</li>
+                    <li>Cate Blanchett</li>
+                    <li>Angelina Jolie</li>
+                    <li>Scarlett Johansson</li>
+                    <li>Sandra Bullock</li>
+                    <li>Meryl Streep</li>
+                    <li>Emma Stone</li>
+                    <li>Emma Thompson</li>
+                    <li>Reese Witherspoon</li>
+                </ul>
+            </div>
+        </article>
         
             <footer>
                 <hr/>
