--- a/toprated.html
+++ b/toprated.html
@@ -32,21 +32,21 @@
                 <p class="rechts">Heb je nou totaal geen inspiratie voor welke film je vanavond wilt gaan kijken? Ik ga je helpen! Ik heb een lijst gemaakt van de beste films die er zijn, en ook nog met een top 3! Ik weet zeker dat de perfecte film voor jou ertussen zit <strong>;)</strong></p>.
                <ul class="links">
                    <strong>de beste films aller tijden:</strong>
-                <li>scarface (1983)</li>
-                <li>pulp fiction (1994)</li>
-                <li>the matrix(1999)</li>
-                <li>lord of the rings (alle delen)</li>
-                <li>la vita e belle (1997)</li>
-                <li>coming to America (1988)</li>
-                <li>the godfather (alle delen)</li>
-                <li>back to the future (1985)</li>
-                <li>intouchables (2011)</li>
-                <li>star wars (alle delen)</li>
-                <li>the conjouring (alle delen)</li>
-                <li>lion king (1994)</li>
-                <li>taken (alle delen)</li>
-                <li>terminator 2 (1991)</li>
-                <li>pretty woman (1990)</li>
+                <li>Scarface (1983)</li>
+                <li>Pulp Fiction (1994)</li>
+                <li>The Matrix(1999)</li>
+                <li>Lord Of The Rings (alle delen)</li>
+                <li>La vita e belle (1997)</li>
+                <li>Coming to America (1988)</li>
+                <li>The Godfather (alle delen)</li>
+                <li>Back to the future (1985)</li>
+                <li>Intouchables (2011)</li>
+                <li>Star Wars (alle delen)</li>
+                <li>The Conjouring (alle delen)</li>
+                <li>Lion King (1994)</li>
+                <li>Taken (alle delen)</li>
+                <li>Terminator 2 (1991)</li>
+                <li>Pretty woman (1990)</li>
                 <li>nog steeds niet genoeg keus? klik dan <a href="https://www.moviemeter.nl/toplijst/film/1/top-250-beste-films-aller-tijden">hier</a> voor nog meer films</li>
                 </ul>
                     <img class="plaatje2" src="afbeeldingen/loremipsum.jpg">
