--- a/genres.html
+++ b/genres.html
@@ -28,10 +28,22 @@
             <article>
                 <div class="genres">
                     <img class="plaatje" src="afbeeldingen/loremipsum.jpg">
-                <p class="rechts">Informatie (van Latijn informare: "vormgeven, vormen, instrueren") is alles wat kennis toevoegt en zo onwetendheid, onzekerheid of onbepaaldheid vermindert. Strikt genomen is informatie pas informatie als die interpreteerbaar is. Interpreteren en integreren van informatie resulteert in kennis. Er verschenen in de loop van de tijd honderden definities van het begrip. Dit komt doordat een aantal (sub)wetenschappen en toepassingsgebieden het verschillend gebruiken. Informatie wordt overgedragen via communicatie. Wie een boodschap overdraagt is de zender en wie de boodschap ontvangt is de ontvanger. Meestal is er tweerichtingsverkeer.</p>
-                <p class="links">De term persoonlijkheid is afgeleid van het Latijnse 'persona' of masker, waardoor ook de connotatie is ontstaan dat persoonlijkheid te maken heeft met het uiterlijke gedrag, dat wat de omgeving van iemand ziet. Het verschil met 'karakter' is dat persoonlijkheid door opvoeding en omgeving beïnvloed worden en pas vorm krijgt tijdens de adolescentie, terwijl karakter vaak meer als de biologische aanleg, de (aangeboren, vrij onveranderlijke) aard van die persoon wordt beschouwd.</p>
+                <p class="rechts">In de filmwereld bestaat er verschillende genres, om aan te duiden wat voor soort film het nou is. Sommige genres zijn erg breed, en daarom soms vaag, daarom heb ik een kort lijstje gemaakt van een aantal genres met een korte uitleg erbij om een duidelijk beeld te geven van een aantal genres, zodat je bij het kiezen van je perfecte film wel het goede thema te pakken hebt!</p>
+                <ul class="links">
+                    <li><strong>Horror:</strong> Spanning, angst</li>
+                    <li><strong>Science Fiction:</strong> Toekomst, onbekende.</li>
+                    <li><strong>Actie:</strong> Gevechten, stunts, vaak 1 held.</li>
+                    <li><strong>Documentaire:</strong> Gebaseerd op feiten, persoonlijke belevingswereld.</li>
+                    <li><strong>Fantasy:</strong> Fantasie, tovenarij, onmogelijk in het echte leven.</li>
+                </ul>
                     <img class="plaatje" src="afbeeldingen/loremipsum.jpg">
-                <p class="rechts">De persoonlijkheid wordt ook omschreven als het unieke en stabiele patroon van psychologische en gedragskenmerken waardoor de ene mens zich van de andere onderscheidt. Eenvoudig uitgedrukt: de manier waarop iemand met uiteenlopende situaties omgaat of het karakteristieke gedragspatroon dat iemand in verschillende situaties vertoont, noemen we persoonlijkheid. Onderzoek laat zien dat de persoonlijkheid gedurende de levensloop kan veranderen ten gevolge van levensgebeurtenissen.</p>
+                <ul class="rechts">
+                    <li><strong>Comedy:</strong> Humor, luchtig onderwerp.</li>
+                    <li><strong>Romantisch:</strong> Liefde, passie, vaak drama.</li>
+                    <li><strong>Tekenfilm:</strong> Animatie, vaak kinderfilms.</li>
+                    <li><strong>Thriller:</strong> Spanning, actie, gevaar</li>
+                    <li><strong>Mysterie:</strong> Misdaden, vaak criminaliteit, zoeken naar oplossing</li>
+                </ul>
                 </div>
             </article>
         
