--- a/toprated.html
+++ b/toprated.html
@@ -14,6 +14,16 @@
                 <h1>beste films (imo)</h1>
                 <br>
             </header>
+
+            <style>
+                body, article, html {
+                  background-image: url('https://st3.depositphotos.com/1115174/14582/v/450/depositphotos_145823823-stockillustratie-afbeelding-van-een-filmrol-stripe.jpg');
+                  background-attachment: fixed;
+                  background-repeat: no-repeat;
+                  background-size: cover;
+                  background-size: 100% 100%;
+                }
+                </style>
             
             <nav>
                 <ul>
