--- a/acteurs.html
+++ b/acteurs.html
@@ -10,7 +10,7 @@
     <body>
         <main>
             <header>
-                <h1>de beste acteurs (imo) </h1>
+                <h1>De beste acteurs (imo) </h1>
                 <br>
             </header>
 
@@ -27,10 +27,10 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="toprated.html">mijn top rated films</a></li>
-                    <li><a href="servers.html">waar kan je films bekijken?</a></li>
-                    <li><a class="active" href="acteurs.html">beste acteurs</a></li>
-                    <li><a href="genres.html">genres</a></q></li>
+                    <li><a href="toprated.html">Mijn top rated films</a></li>
+                    <li><a href="servers.html">Waar kan je films bekijken?</a></li>
+                    <li><a class="active" href="acteurs.html">Beste acteurs</a></li>
+                    <li><a href="genres.html">Genres</a></q></li>
                 </ul>
             </nav>
             
