--- a/toprated.html
+++ b/toprated.html
@@ -11,7 +11,7 @@
     <body>
         <main>
             <header>
-                <h1>beste films (imo)</h1>
+                <h1>Beste films (imo)</h1>
                 <br>
             </header>
 
@@ -28,10 +28,10 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a class="active" href="toprated.html">mijn top rated films</a></li>
-                    <li><a href="servers.html">waar kan je films bekijken?</a></li>
-                    <li><a href="acteurs.html">beste acteurs</a></li>
-                    <li><a href="genres.html">genres</a></li>
+                    <li><a class="active" href="toprated.html">Mijn top rated films</a></li>
+                    <li><a href="servers.html">Waar kan je films bekijken?</a></li>
+                    <li><a href="acteurs.html">Beste acteurs</a></li>
+                    <li><a href="genres.html">Genres</a></li>
                 </ul>
             </nav>
             
