--- a/toprated.html
+++ b/toprated.html
@@ -38,7 +38,7 @@
             
             <article>
                 <div class="rated">
-                    <img class="plaatje" src="https://i.gifer.com/LHkW.gif" alt="universal world" style="width:195px;">
+                    <img class="plaatjelinks" src="https://i.gifer.com/LHkW.gif" alt="universal world" style="width:195px;">
                 <p class="rechts">Heb je nou totaal geen inspiratie voor welke film je vanavond wilt gaan kijken? Ik ga je helpen! Ik heb een lijst gemaakt van de beste films die er zijn, en ook nog met een top 3! Ik weet zeker dat de perfecte film voor jou ertussen zit <strong>;)</strong></p>.
                <ul class="links">
                    <strong>de beste films aller tijden:</strong>
@@ -59,8 +59,8 @@
                 <li>Pretty woman (1990)</li>
                 <li>Nog steeds niet genoeg keus? Klik dan <a href="https://www.moviemeter.nl/toplijst/film/1/top-250-beste-films-aller-tijden">hier</a> voor nog meer films</li>
                 </ul>
-                    <img class="plaatje2" src="https://th.bing.com/th/id/R.eae1e5818839a55c4e081cad8528ca54?rik=ELlR6jnquInp4g&pid=ImgRaw&r=0.jpg" alt="godfather+scarface" style="width:250px">
-                    <img class="plaatje" src="https://www.listchallenges.com/f/lists/15af05b3-59cc-4221-9200-ee9162e35a10.jpg" alt="hoofdpersonages films" style="width:240px;">
+                    <img class="plaatjerechts" src="https://th.bing.com/th/id/R.eae1e5818839a55c4e081cad8528ca54?rik=ELlR6jnquInp4g&pid=ImgRaw&r=0.jpg" alt="godfather+scarface" style="width:250px">
+                    <img class="plaatjelinks" src="https://www.listchallenges.com/f/lists/15af05b3-59cc-4221-9200-ee9162e35a10.jpg" alt="hoofdpersonages films" style="width:240px;">
                 <ol class="rechts">natuurlijk heb ik mn eigen ranking, dit is mijn <strong>top 3</strong>:
                 <li>1. the godfather</li>
                 <li>2. pretty woman</li>
