--- a/acteurs.html
+++ b/acteurs.html
@@ -37,7 +37,7 @@
             
             <article>
                 <div class="acteurs">
-                    <img class="plaatje" src="afbeeldingen/loremipsum.jpg">
+                    <img class="plaatjelinks" src="https://th.bing.com/th/id/R.f5b1add5411b6041fb2cc77dc10d1828?rik=kclE1rqOzFhUoA&pid=ImgRaw&r=0,jpg" alt="casting acteur" style="width:240px;">
                 <p class="rechts">De acteurs zijn het belangrijkste gedeelte van een film. Als de acteur het niet goed doet, is je film (meestal) verpest. Om een goede film te kiezen waarvan je zeker weet dat de acteurs het niet zullen verpesten, heb ik een lijst gemaakt van de beste acteurs oat. Om het overzichtelijk te houden, is er 1 lijst voor mannen, en 1 lijst voor vrouwen.<p>
                 <ul class="links"><strong>Beste mannelijke acteurs:</strong>
                     <li>Tom Hanks</li>
@@ -54,7 +54,7 @@
                     <li>Willem Dafoe</li>
                     <li>Daniel Craig</li>
                 </ul>
-                    <img class="plaatje" src="afbeeldingen/loremipsum.jpg">
+                    <img class="plaatjelinks" src="https://th.bing.com/th/id/OIP.aPybCaAxtsMKGm-1Bw9lDQHaLG?pid=ImgDet&rs=1.jpg" alt="Tom Hanks" style="width:170px;">
                 <ul class="rechts"><strong>Beste vrouwelijke actrices:</strong>
                     <li>Julia Roberts</li>
                     <li>Cate Blanchett</li>
@@ -66,8 +66,11 @@
                     <li>Emma Thompson</li>
                     <li>Reese Witherspoon</li>
                 </ul>
+                    <img class="plaatjelinks" src="https://th.bing.com/th/id/OIP.N6HXrgTII_ASc5bHAYaIBgHaLH?pid=ImgDet&rs=1.jpg" alt="Julia Roberts" style="width:170px;">
             </div>
         </article>
+
+        <details>Pic.1: Tom Hanks<br>Pic.2: Julia Roberts</details>
         
             <footer>
                 <hr/>
