--- a/genres.html
+++ b/genres.html
@@ -37,7 +37,7 @@
             
             <article>
                 <div class="genres">
-                    <img class="plaatje" src="afbeeldingen/loremipsum.jpg">
+                    <img class="plaatjelinks" src="https://3.bp.blogspot.com/-IX7ZykJXMm4/WH0me8XQ2QI/AAAAAAAAAFg/elhevxskYtEp4iOoi01in7hp-6kCgsnxgCLcB/s1600/7207407-Movie-Poster-of-Film-Genres-Vintage-Background-Stock-Photo-movie-cinema-movies.jpg" alt="genres collage" style="width:230px">
                 <p class="rechts">In de filmwereld bestaat er verschillende genres, om aan te duiden wat voor soort film het nou is. Sommige genres zijn erg breed, en daarom soms vaag, daarom heb ik een kort lijstje gemaakt van een aantal genres met een korte uitleg erbij om een duidelijk beeld te geven van een aantal genres, zodat je bij het kiezen van je perfecte film wel het goede thema te pakken hebt!</p>
                 <ul class="links">
                     <li><strong>Horror:</strong> Spanning, angst</li>
@@ -46,7 +46,7 @@
                     <li><strong>Documentaire:</strong> Gebaseerd op feiten, persoonlijke belevingswereld.</li>
                     <li><strong>Fantasy:</strong> Fantasie, tovenarij, onmogelijk in het echte leven.</li>
                 </ul>
-                    <img class="plaatje" src="afbeeldingen/loremipsum.jpg">
+                    <img class="plaatjelinks" src="afbeeldingen/loremipsum.jpg">
                 <ul class="rechts">
                     <li><strong>Comedy:</strong> Humor, luchtig onderwerp.</li>
                     <li><strong>Romantisch:</strong> Liefde, passie, vaak drama.</li>
