final update (website af)

--- a/acteurs.html
+++ b/acteurs.html
@@ -38,7 +38,7 @@
             <article>
                 <div class="acteurs">
                     <img class="plaatjelinks" src="https://th.bing.com/th/id/R.f5b1add5411b6041fb2cc77dc10d1828?rik=kclE1rqOzFhUoA&pid=ImgRaw&r=0,jpg" alt="casting acteur" style="width:240px;">
-                <p class="rechts">De acteurs zijn het belangrijkste gedeelte van een film. Als de acteur het niet goed doet, is je film (meestal) verpest. Om een goede film te kiezen waarvan je zeker weet dat de acteurs het niet zullen verpesten, heb ik een lijst gemaakt van de beste acteurs oat. Om het overzichtelijk te houden, is er 1 lijst voor mannen, en 1 lijst voor vrouwen.<p>
+                <p class="rechts"><em>De acteurs zijn het belangrijkste gedeelte van een film. Als de acteur het niet goed doet, is je film (meestal) verpest. Om een goede film te kiezen waarvan je zeker weet dat de acteurs het niet zullen verpesten, heb ik een lijst gemaakt van de beste acteurs oat. Om het overzichtelijk te houden, is er 1 lijst voor mannen, en 1 lijst voor vrouwen.</em><p>
                 <ul class="links"><strong>Beste mannelijke acteurs:</strong>
                     <li>Tom Hanks</li>
                     <li>Arnold Schwarzenegger</li>
@@ -70,7 +70,7 @@
             </div>
         </article>
 
-        <details>Pic.1: Tom Hanks<br>Pic.2: Julia Roberts</details>
+        <details><strong>Pic.1:</strong> Tom Hanks<br><strong>Pic.2:</strong> Julia Roberts</details>
         
             <footer>
                 <hr/>
