--- a/genres.html
+++ b/genres.html
@@ -38,7 +38,7 @@
             <article>
                 <div class="genres">
                     <img class="plaatjelinks" src="https://3.bp.blogspot.com/-IX7ZykJXMm4/WH0me8XQ2QI/AAAAAAAAAFg/elhevxskYtEp4iOoi01in7hp-6kCgsnxgCLcB/s1600/7207407-Movie-Poster-of-Film-Genres-Vintage-Background-Stock-Photo-movie-cinema-movies.jpg" alt="genres collage" style="width:230px">
-                <p class="rechts">In de filmwereld bestaat er verschillende genres, om aan te duiden wat voor soort film het nou is. Sommige genres zijn erg breed, en daarom soms vaag, daarom heb ik een kort lijstje gemaakt van een aantal genres met een korte uitleg erbij om een duidelijk beeld te geven van een aantal genres, zodat je bij het kiezen van je perfecte film wel het goede thema te pakken hebt!</p>
+                <p class="rechts"><em>In de filmwereld bestaat er verschillende genres, om aan te duiden wat voor soort film het nou is. Sommige genres zijn erg breed, en daarom soms vaag, daarom heb ik een kort lijstje gemaakt van een aantal genres met een korte uitleg erbij om een duidelijk beeld te geven van een aantal genres, zodat je bij het kiezen van je perfecte film wel het goede thema te pakken hebt!</em></p>
                 <ul class="links">
                     <li><strong>Horror:</strong> Spanning, angst</li>
                     <li><strong>Science Fiction:</strong> Toekomst, onbekende.</li>
@@ -46,7 +46,7 @@
                     <li><strong>Documentaire:</strong> Gebaseerd op feiten, persoonlijke belevingswereld.</li>
                     <li><strong>Fantasy:</strong> Fantasie, tovenarij, onmogelijk in het echte leven.</li>
                 </ul>
-                    <img class="plaatjelinks" src="afbeeldingen/loremipsum.jpg">
+                    <img class="plaatjelinks" src="https://th.bing.com/th/id/R.933bd6f6930242a7764b51ae5db7352d?rik=ZTVuf3GMArrWGQ&riu=http%3a%2f%2fwww.logotypes101.com%2flogos%2f489%2fB64DA6598A9FED1808BCAFAFB80B860B%2fKijkwijzer__angst.png&ehk=OyiVNT9FO5Sz0j7OXczWOEI7m5oTqrO7%2fM7Z5LFlzO8%3d&risl=&pid=ImgRaw&r=0&sres=1&sresct=1.jpg" alt="kijkwijzer angst" style="width:200px;">
                 <ul class="rechts">
                     <li><strong>Comedy:</strong> Humor, luchtig onderwerp.</li>
                     <li><strong>Romantisch:</strong> Liefde, passie, vaak drama.</li>
@@ -54,6 +54,7 @@
                     <li><strong>Thriller:</strong> Spanning, actie, gevaar</li>
                     <li><strong>Mysterie:</strong> Misdaden, vaak criminaliteit, zoeken naar oplossing</li>
                 </ul>
+                    <img class="plaatjelinks" src="https://media1.tenor.com/images/8c06d926c7d65af4a92d5a1d233ddabb/tenor.gif?itemid=9764215.gif" alt="comedy" style="width:230px">
                 </div>
             </article>
         
