--- a/toprated.html
+++ b/toprated.html
@@ -39,9 +39,9 @@
             <article>
                 <div class="rated">
                     <img class="plaatjelinks" src="https://i.gifer.com/LHkW.gif" alt="universal world" style="width:195px;">
-                <p class="rechts">Heb je nou totaal geen inspiratie voor welke film je vanavond wilt gaan kijken? Ik ga je helpen! Ik heb een lijst gemaakt van de beste films die er zijn, en ook nog met een top 3! Ik weet zeker dat de perfecte film voor jou ertussen zit <strong>;)</strong></p>.
+                <p class="rechts"><em>Heb je nou totaal geen inspiratie voor welke film je vanavond wilt gaan kijken? Ik ga je helpen! Ik heb een lijst gemaakt van de beste films die er zijn, en ook nog met een top 3! Ik weet zeker dat de perfecte film voor jou ertussen zit</em> <strong>;)</strong></p>.
                <ul class="links">
-                   <strong>de beste films aller tijden:</strong>
+                   <strong>De beste films aller tijden:</strong>
                 <li>Scarface (1983)</li>
                 <li>Pulp Fiction (1994)</li>
                 <li>The Matrix(1999)</li>
@@ -61,10 +61,10 @@
                 </ul>
                     <img class="plaatjerechts" src="https://th.bing.com/th/id/R.eae1e5818839a55c4e081cad8528ca54?rik=ELlR6jnquInp4g&pid=ImgRaw&r=0.jpg" alt="godfather+scarface" style="width:250px">
                     <img class="plaatjelinks" src="https://www.listchallenges.com/f/lists/15af05b3-59cc-4221-9200-ee9162e35a10.jpg" alt="hoofdpersonages films" style="width:240px;">
-                <ol class="rechts">natuurlijk heb ik mn eigen ranking, dit is mijn <strong>top 3</strong>:
-                <li>1. the godfather</li>
-                <li>2. pretty woman</li>
-                <li>3. coming to America</li>
+                <ol class="rechts">Natuurlijk heb ik mijn eigen ranking, dit is mijn <strong>top 3</strong>:
+                <li>1. The Godfather</li>
+                <li>2. Pretty woman</li>
+                <li>3. Coming to America</li>
                 </ol>
                 </div>
             </article>
